fixtures/invalid/bad-link-href.lmk
@link href="javascript:alert(1)"
Executable URL schemes are not allowed.
